--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import url("./assets/BadURL.css");
+@import url("./assets/Contact.css");
+@import url("./assets/Navbar.css");
+
+:root {
+  --purple: rgb(126, 13, 232);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,4 +14,8 @@
 
 body {
   background-color: rgb(234, 239, 243);
+}
+a {
+  text-decoration: none;
+  color: black;
 }
