--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -1,11 +1,50 @@
 .navbar {
-  height: 3rem;
-  background-color: rgb(126, 13, 232);
+  min-width: 100vw;
+  height: 4rem;
+  background-color: var(--purple);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 3rem;
 }
 .navbar a {
-    color: rgb(250, 236, 236);
+  color: rgb(250, 236, 236);
+  padding: 0 1.2rem;
+  transition: background 0.5s ease-in-out;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+}
+
+.navbar li {
+  list-style-type: none;
+}
+.navbar-links {
+  display: flex;
+  align-items: center;
+  padding-right: 2rem;
+}
+
+.cart-icon:hover,
+.cart-icon:focus {
+  outline: none;
+}
+.navbar-links a:hover,
+.navbar-links a:focus {
+  outline: none;
+  background-color: aliceblue;
+  color: var(--purple);
+}
+@media screen and (max-width: 768px) {
+  .navbar-links li:nth-child(1),
+  .navbar-links li:nth-child(2) {
+    display: none;
+  }
+}
+@media screen and(min-width: 768px) {
+  .navbar-name:hover,
+  .navbar-name:focus {
+    background-color: aliceblue;
+    outline: none;
+    color: var(--purple);
+  }
 }
