--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import url("./assets/Navbar.css");
 @import url("./assets/Footer.css");
 @import url("./assets/LoadingError.css");
+@import url("./assets/Main.css");
 :root {
   --purple: rgb(46, 3, 87);
 }
