Try to deploy server on netlify

--- a/src/assets/Main.css
+++ b/src/assets/Main.css
@@ -1,8 +1,11 @@
+main {
+  margin: 2rem;
+}
+
 .phone-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
-  margin: 2rem;
 }
 .phone-card {
   background-color: aliceblue;
