--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -14,9 +14,17 @@ footer {
   align-items: center;
 }
 
+.footer-template {
+  margin-top: 220px;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .cart-count {
     top: -0.7rem;
     right: -0.7rem;
+  }
+  .footer-template {
+    display: none;
   }
 }
