--- a/src/assets/BadURL.css
+++ b/src/assets/BadURL.css
@@ -6,7 +6,7 @@
   flex-direction: column;
 }
 .bad-url * {
-  margin: 0.7rem 0;
+  margin: .7rem 0;
 }
 .bad-url h2 {
   font-size: 2rem;
@@ -18,7 +18,7 @@
 .bad-url a {
   transition: transform 1s ease-in-out;
   border: 1px solid var(--purple);
-  padding: 0.3rem 2.5rem;
+  padding: .3rem 2.5rem;
   color: var(--purple);
 }
 
