--- a/src/assets/LoadingError.css
+++ b/src/assets/LoadingError.css
@@ -11,7 +11,7 @@
   position: relative;
   width: 80px;
   height: 80px;
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
