--- a/src/assets/Main.css
+++ b/src/assets/Main.css
@@ -9,8 +9,8 @@ main {
 }
 .phone-card {
   background-color: aliceblue;
-  padding: 0.7rem;
-  border-radius: 0.4rem;
+  padding: .7rem;
+  border-radius: .4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +18,7 @@ main {
   justify-content: center;
 }
 .phone-card * {
-  margin: 0.3rem 0;
+  margin: .3rem 0;
 }
 .phone-card img {
   height: 7rem;
@@ -26,7 +26,7 @@ main {
 }
 .phone-card button {
   cursor: pointer;
-  padding: 0.4rem 0.7rem;
+  padding: .4rem .7rem;
   border: transparent;
   background-color: rgb(7, 227, 7);
   border-radius: 3px;
@@ -53,6 +53,9 @@ main {
 }
 
 @media (max-width: 768px) {
+  main {
+    margin-bottom: 5rem;
+  }
   .phone-container {
     grid-template-columns: repeat(2, 1fr);
   }
