--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url("./assets/LoadingError.css");
 @import url("./assets/Main.css");
 @import url("./assets/About.css");
+@import url("./assets/Cart.css");
 :root {
   --purple: rgb(46, 3, 87);
 }
