--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -21,8 +21,8 @@ footer {
 
 @media (max-width: 768px) {
   .cart-count {
-    top: -0.7rem;
-    right: -0.7rem;
+    top: -.7rem;
+    right: -.7rem;
   }
   .footer-template {
     display: none;
