--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -50,4 +50,69 @@
   opacity: 1;
 }
 
+.cart {
+  display: flex;
+  flex-direction: column;
+}
+.cart-header {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.cart-product {
+  background-color: aliceblue;
+  padding: 3rem 1rem;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
 
+.product-quantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-quantity button {
+  border: none;
+  background-color: transparent;
+}
+.product-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.quantity-icons {
+  width: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.5rem;
+}
+.quantity-icons svg {
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .cart-product {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .cart-product h2 {
+    margin: 0.5rem 0;
+  }
+  .cart-product img {
+    margin-bottom: 1rem;
+  }
+  .product-quantity {
+    margin-bottom: 1rem;
+  }
+}
