--- a/src/assets/Cart.css
+++ b/src/assets/Cart.css
@@ -26,7 +26,6 @@
   font-size: 16px;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
   position: relative;
   overflow: hidden;
   transition: background-color 0.3s, scale 0.5s;
@@ -72,11 +71,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.quantity-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .product-quantity button {
   border: none;
   background-color: transparent;
+
 }
 .product-top {
   display: flex;
