--- a/src/assets/Main.css
+++ b/src/assets/Main.css
@@ -25,7 +25,7 @@
   border: transparent;
   background-color: var(--purple);
   border-radius: 3px;
-  color: rgb(237, 246, 245);
+  color: var(--white);
   transition: transform 0.5s ease;
   outline-color: var(--purple);
 }
