--- a/src/assets/Payments.css
+++ b/src/assets/Payments.css
@@ -25,13 +25,20 @@
 .payment-start h3 {
   margin-bottom: 2rem;
 }
-.payment-start button {
+.payments-start-button {
+ 
   padding: 0.5rem 3rem;
   border-radius: 4px;
   border: 1px solid var(--purple);
+  transition: background 0.3s, color 0.5s, scale 0.5s;
 }
-.payment-start button:focus,
-.payment-start button:hover {
+
+
+.payments-start-button:focus,
+.payments-start-button:hover {
   background-color: var(--purple);
   color: var(--white);
+  outline-color: var(--purple);
+  scale: 105%;
 }
+
