--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -18,11 +18,14 @@ footer {
   margin-top: 220px;
   text-align: center;
 }
+.home-icon {
+  margin-bottom: 6px;
+}
 
 @media (max-width: 768px) {
   .cart-count {
-    top: -.7rem;
-    right: -.7rem;
+    top: -0.7rem;
+    right: -0.7rem;
   }
   .footer-template {
     display: none;
