--- a/src/assets/Payments.css
+++ b/src/assets/Payments.css
@@ -26,11 +26,30 @@
   margin-bottom: 2rem;
 }
 .payments-start-button {
- 
   padding: 0.5rem 3rem;
   border-radius: 4px;
   border: 1px solid var(--purple);
   transition: background 0.3s, color 0.5s, scale 0.5s;
+}
+
+.dots span {
+  width: 1px;
+  height: 1px;
+  margin: 0 3px;
+  animation: dot-animation 1s infinite;
+  opacity: 1;
+}
+
+.dots span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.dots span:nth-child(2) {
+  animation-delay: 0.33s;
+}
+
+.dots span:nth-child(3) {
+  animation-delay: 0.66s;
 }
 
 
@@ -42,3 +61,13 @@
   scale: 105%;
 }
 
+@keyframes dot-animation {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  25%,
+  75% {
+    opacity: 1;
+  }
+}
