Change image sizes

--- a/src/assets/About.css
+++ b/src/assets/About.css
@@ -21,7 +21,7 @@
   margin-right: 1rem;
 }
 .about-link {
-  color: var(--purple);
+  color: rgb(4, 4, 250);
 }
 .about-right {
   font-size: 0.8rem;
