--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Rubik", sans-serif;
+  font-family:'Times New Roman', Times, serif;
 }
 
 body {
