--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @import url("./assets/Cart.css");
 @import url("./assets/Payments.css");
 @import url("./assets/Modal.css");
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 :root {
   --purple: rgb(46, 3, 87);
   --white: rgb(241, 238, 238);
@@ -22,7 +23,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:'Times New Roman', Times, serif;
+  font-family: "Rubik", sans-serif;
 }
 
 body {
