--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -9,7 +9,7 @@
 .navbar a {
   color: var(--white);
   padding: 0 1.2rem;
-  transition: background .5s ease-in-out;
+  transition: background 0.5s ease-in-out;
   height: 4rem;
   display: flex;
   align-items: center;
@@ -27,9 +27,12 @@
 }
 .cart-count {
   position: absolute;
-  top: .6rem;
-  right: .7rem;
+  top: 0.6rem;
+  right: 0.7rem;
 }
+
+
+
 .cart-icon:hover,
 .cart-icon:focus {
   outline: none;
