--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -1,9 +1,20 @@
-footer {
+.footer-mobile {
   width: 100vw;
   position: fixed;
   bottom: 0;
   height: 3rem;
   background-color: black;
+}
+
+.footer-template {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 1rem;
 }
 
 .footer-icons {
@@ -14,10 +25,6 @@ footer {
   align-items: center;
 }
 
-.footer-template {
-  margin-top: 220px;
-  text-align: center;
-}
 .home-icon {
   margin-bottom: 5px;
 }
