--- a/src/assets/Main.css
+++ b/src/assets/Main.css
@@ -99,7 +99,7 @@ h1 {
 .pagination {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin: 2rem 0 5rem 0;
 }
 .pagination button {
   margin: 0 0.5rem;
