--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -36,6 +36,10 @@
   outline: none;
 }
 
+.active-link {
+  background-color: rgb(110, 3, 117);
+}
+
 @media (max-width: 768px) {
   .cart-icon,
   .cart-count {
