Add some styles for buttons and grab text

--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,8 @@ button:disabled {
 }
 
 *::selection {
-  background-color: rgb(240, 195, 241);
-  color: var(--purple);
+  background-color: var(--purple);
+  color: white;
 }
 ::-webkit-scrollbar {
   width: 11px;
